solved error section overlap

--- a/src/components/country/country.scss
+++ b/src/components/country/country.scss
@@ -9,6 +9,11 @@
     }
 }
 
+#countries{
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .country-detail {
     display: flex;
     flex-direction: column;
