--- a/src/components/document_terjemah/document_terjemah.scss
+++ b/src/components/document_terjemah/document_terjemah.scss
@@ -10,6 +10,11 @@
     }
 }
 
+#document-terjemah{
+width: 100%;
+overflow-x: hidden;
+}
+
 .document-terjemah-detail {
     padding: 70px;
     display: flex;
