--- a/src/components/excellence/excellence.scss
+++ b/src/components/excellence/excellence.scss
@@ -1,5 +1,7 @@
 #excellence {
     margin-top: -300px;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .excellence-card {
